--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,12 @@ body {
 }
 
 .hero-section .hero-section-image {
-  margin-top: -90px;
-  margin-right: -110px;
+  margin-top: -280px;
+  margin-right: 181px;
 }
 .hero-section .hero-section-image img {
-  width: 120%;
+  width: 181%;
+  height: 120vh;
 }
 
 .our-trusted-clients {
@@ -82,7 +83,7 @@ body {
 .brands .brands-item.custom {
   background-color: #fcefe9;
 }
-.brands img {
+.brands img:nth-last-of-type(1) {
   width: 100%;
 }
 
@@ -127,8 +128,105 @@ body {
 }
 
 .products .products-item img {
-  width: 50%;
+  width: 90%;
   position: absolute;
-  bottom: -25%;
+  bottom: -160px;
+  left: 0;
+}
+
+.products .products-item .custom-image {
+  width: 60%;
+  bottom: -160px;
   left: 25%;
+}
+
+.about-us {
+  margin: 80px 0;
+}
+
+.about-us .about-us-data {
+  padding-top: 50px;
+}
+.about-us .about-us-data h3 {
+  margin-bottom: 100px;
+  font-size: 45px;
+}
+.about-us .about-us-data p {
+  margin-bottom: 60px;
+  font-size: 20px;
+}
+
+.about-us-images {
+  position: relative;
+}
+
+.about-us-images-inner {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.about-us-images-inner img {
+  margin-left: 10px;
+}
+
+.get-in-touch {
+  background-color: #fff;
+}
+.get-in-touch .get-in-touch-data {
+  padding-top: 80px;
+}
+.get-in-touch .get-in-touch-data button {
+  color: #fe8432;
+  border: 2px solid #fe8432;
+  background-color: transparent;
+  padding: 5px 15px;
+  border-radius: 30px;
+  margin-bottom: 40px;
+}
+
+.get-in-touch .get-in-touch-data input {
+  background-color: #f5f5f5;
+  border: 0;
+  padding: 18px 180px 14px 5px;
+}
+.get-in-touch .get-in-touch-data h3 {
+  margin-bottom: 40px;
+}
+.get-in-touch .get-in-touch-data form {
+  position: relative;
+}
+.get-in-touch .get-in-touch-data form button {
+  position: absolute;
+  border-radius: 0;
+  padding: 12px;
+  left: 238px;
+  background-color: #d9ab82;
+  color: #fff;
+  border: #d9ab82 solid 2px;
+  margin-top: 2px;
+}
+.get-in-touch .get-in-touch-data form button i {
+  background-color: #fae2c8;
+  padding: 5px;
+  margin-left: 10px;
+}
+footer {
+  padding: 10px 0;
+}
+footer ul {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+}
+footer ul li {
+  padding: 0 10px;
+  list-style-type: none;
+}
+
+footer .social-icon {
+  margin-left: 40px;
+}
+footer i {
+  margin-right: 80px;
 }
